Analista de Sistemas

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Richard hanrick">Alexis Jara</h1>
 
-          <p class="title">Desarrollador Web</p>
+          <p class="title">Analista de Sistemas</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
