--- a/index.html
+++ b/index.html
@@ -504,48 +504,54 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Education</h3>
+            <h3 class="h3">Conocimientos</h3>
           </div>
 
           <ol class="timeline-list">
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">Diseño Gráfico</h4>
 
-              <span>2007 — 2008</span>
+              <span>Nivel: Experto</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Mi camino en el diseño gráfico comenzó de manera autodidacta en 2020. 
+                A medida que fui profundizando en mi aprendizaje a través de diversos cursos, 
+                adquirí nuevos conocimientos y habilidades que me permitieron enseñar a otros. 
+                Con el tiempo, desarrollé la capacidad de generar ideas innovadoras y plasmarlas de forma rápida y efectiva, 
+                logrando simplificar procesos creativos y maximizar resultados.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">Desarrollador Web</h4>
 
-              <span>2006 — 2007</span>
+              <span>Nivel: Senior</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
+                Comencé mi carrera como desarrollador web en 2022, gracias a la oportunidad que me brindó 'EGG Coperation', 
+                donde pude introducirme en el mundo del desarrollo. A partir de allí, continué mi aprendizaje de manera autodidacta, 
+                lo que me ha permitido desarrollar la habilidad de crear sitios web funcionales y con un diseño atractivo. 
+                La creatividad adquirida en el diseño gráfico ha sido clave para lograr proyectos visualmente impactantes y 
+                bien estructurados.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
+              <h4 class="h4 timeline-item-title">Pentesting</h4>
 
-              <span>2002 — 2004</span>
+              <span>Nivel: Junior</span>
 
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+                Mi interés por el pentesting comenzó en 2023, cuando decidí adentrarme en el mundo de la ciberseguridad de manera 
+                autodidacta. Tras investigar y realizar diversos cursos, pude adquirir los conocimientos básicos sobre hacking y 
+                seguridad informática. Este aprendizaje me ha permitido comprender mejor la constante lucha entre el peligro y la 
+                protección, y estoy completamente dispuesto a profundizar aún más en este fascinante campo.
               </p>
 
             </li>
@@ -561,49 +567,50 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Experience</h3>
+            <h3 class="h3">En Proceso</h3>
           </div>
 
           <ol class="timeline-list">
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">Lic. Analisis de Sistemas</h4>
 
-              <span>2015 — Present</span>
+              <span>En curso</span>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+                Ahora estoy comenzando la carrera de Licenciatura en Análisis de Sistemas en la Universidad Americana y estoy 
+                plenamente comprometido a completarla con excelencia. Sería un honor alcanzar este título y seguir creciendo 
+                profesionalmente.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">Asesor Comercial</h4>
 
-              <span>2013 — 2015</span>
+              <span>En curso</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                ¿Por qué no seguir sumando conocimientos? También estoy aprendiendo asesoría comercial de manera autodidacta. 
+                Es bien sabido que, mientras más sabes, mayores son las oportunidades de éxito. Por eso, cada aprendizaje cuenta y 
+                nada está de más.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Web designer</h4>
+              <h4 class="h4 timeline-item-title">Marketing Digital</h4>
 
-              <span>2010 — 2013</span>
+              <span>En curso</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Tú y yo sabemos que el marketing digital es el futuro. Por eso, estoy adquiriendo conocimientos en este ámbito de 
+                forma autodidacta, tomando cursos en línea y explorando nuevas estrategias. Además, estoy considerando invertir en 
+                formación especializada, incluyendo cursos y asesorías, para perfeccionar mis habilidades y crear campañas 
+                más atractivas y efectivas.
               </p>
 
             </li>
@@ -614,14 +621,14 @@
 
         <section class="skill">
 
-          <h3 class="h3 skills-title">My skills</h3>
+          <h3 class="h3 skills-title">Habilidades</h3>
 
           <ul class="skills-list content-card">
 
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
+                <h5 class="h5">Asesoramiento</h5>
                 <data value="80">80%</data>
               </div>
 
@@ -634,7 +641,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
+                <h5 class="h5">Desarrollo Web</h5>
                 <data value="70">70%</data>
               </div>
 
@@ -647,7 +654,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
+                <h5 class="h5">Diseño Gráfico</h5>
                 <data value="90">90%</data>
               </div>
 
@@ -660,7 +667,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
+                <h5 class="h5">Pentesting</h5>
                 <data value="50">50%</data>
               </div>
 
@@ -695,19 +702,19 @@
           <ul class="filter-list">
 
             <li class="filter-item">
-              <button class="active" data-filter-btn>All</button>
+              <button class="active" data-filter-btn>Todos</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web design</button>
+              <button data-filter-btn>Diseño Web</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Applications</button>
+              <button data-filter-btn>Diseño Gráfico</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web development</button>
+              <button data-filter-btn>Pentesting</button>
             </li>
 
           </ul>
@@ -716,7 +723,7 @@
 
             <button class="filter-select" data-select>
 
-              <div class="select-value" data-selecct-value>Select category</div>
+              <div class="select-value" data-selecct-value>Categorias</div>
 
               <div class="select-icon">
                 <ion-icon name="chevron-down"></ion-icon>
@@ -727,19 +734,19 @@
             <ul class="select-list">
 
               <li class="select-item">
-                <button data-select-item>All</button>
+                <button data-select-item>Todos</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web design</button>
+                <button data-select-item>Diseño Web</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Applications</button>
+                <button data-select-item>Diseño Gráfico</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web development</button>
+                <button data-select-item>Pentesting</button>
               </li>
 
             </ul>
@@ -1119,7 +1126,7 @@
       <article class="contact" data-page="contacto">
 
         <header>
-          <h2 class="h2 article-title">Contact</h2>
+          <h2 class="h2 article-title">Contacto</h2>
         </header>
 
         <section class="mapbox" data-mapbox>
@@ -1132,17 +1139,17 @@
 
         <section class="contact-form">
 
-          <h3 class="h3 form-title">Contact Form</h3>
+          <h3 class="h3 form-title">Formulario</h3>
 
           <form action="#" class="form" data-form>
 
             <div class="input-wrapper">
-              <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
+              <input type="text" name="fullname" class="form-input" placeholder="Nombres" required data-form-input>
 
-              <input type="email" name="email" class="form-input" placeholder="Email address" required data-form-input>
+              <input type="email" name="email" class="form-input" placeholder="Email" required data-form-input>
             </div>
 
-            <textarea name="message" class="form-input" placeholder="Your Message" required data-form-input></textarea>
+            <textarea name="message" class="form-input" placeholder="Mensaje" required data-form-input></textarea>
 
             <button class="form-btn" type="submit" disabled data-form-btn>
               <ion-icon name="paper-plane"></ion-icon>
