--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="diseño gráfico">
               <a href="#">
 
                 <figure class="project-img">
@@ -768,7 +768,7 @@
 
                 <h3 class="project-title">Finance</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Diseño Gráfico</p>
 
               </a>
             </li>
