--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
 
             <button class="filter-select" data-select>
 
-              <div class="select-value" data-selecct-value>Categorias</div>
+              <div class="select-value" data-selecct-value>Select category</div>
 
               <div class="select-icon">
                 <ion-icon name="chevron-down"></ion-icon>
@@ -734,7 +734,7 @@
             <ul class="select-list">
 
               <li class="select-item">
-                <button data-select-item>All</button>
+                <button data-select-item>Todos</button>
               </li>
 
               <li class="select-item">
