Actualizando error de fotos.

--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@
                   <h3 class="h3 blog-item-title">Primera publicación del Blog</h3>
 
                   <p class="blog-text">
-                    ¡Mi blog personal fue publicado con éxito a internet!
+                    ¡Mi Blog Personal fue publicado con éxito a internet!
                   </p>
 
                 </div>
