--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/project-1.png" alt="finance" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">En Desarrollo</h3>
@@ -799,7 +799,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
+                  <img src="./assets/images/project-3.png" alt="fundo" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">En Desarrollo</h3>
@@ -889,7 +889,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-8.jpg" alt="task manager" loading="lazy">
+                  <img src="./assets/images/project-8.png" alt="task manager" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">En Desarrollo</h3>
