Actualización de "Sobre Mí" (DESCRIPCION)

--- a/index.html
+++ b/index.html
@@ -209,12 +209,15 @@
 
         <section class="about-text">
           <p>
-            Soy Desarrollador Web, Diseñador Gráfico, Especialista en ventas digitales, Telemarketing, Marketing Digital, Junior en Pentesting y auditoria de redes.
-          </p>
+            ¡Hola! Soy Alexis Jara, un joven apasionado por la ciberseguridad y especializado en pentesting (hacking ético). 
+            Desde muy joven me atrajo la tecnología, y eso me llevó a convertirme en Diseñador Gráfico desde el 2020 y Desarrollador Web desde el 2022. <br> <br>
 
-          <p>
-            Fundador, Ceo, Representante de la Agencia de servicios digitales Innovix Tech.<br><br>
-            Mi objetivo es lograr especializarme en Ciberseguridad y aumentar la visibilidad de Innovix Tech.
+            Soy fundador de InnovixTech, una agencia digital enfocada en ayudar a personas y negocios a crecer en redes sociales con soluciones creativas y efectivas. 
+            También soy dueño de ZyLogix, una tienda especializada en productos electrónicos 100% originales, con tienda oficial en: <br> <br> <a id="linktienda" href="https://www.zylogix.store">www.zylogix.store</a> <br>
+            donde combino mis conocimientos de marketing y tecnología para llevar la experiencia de compra al siguiente nivel. <br> <br>
+
+            Actualmente dedico mi tiempo al marketing digital de ZyLogix y al mundo del pentesting, donde busco compartir conocimientos, 
+            aprender constantemente y contribuir a una internet más segura.
           </p>
         </section>
 
