--- a/index.html
+++ b/index.html
@@ -209,15 +209,19 @@
 
         <section class="about-text">
           <p>
-            ¡Hola! Soy Alexis Jara, un joven apasionado por la ciberseguridad y especializado en pentesting (hacking ético). 
-            Desde muy joven me atrajo la tecnología, y eso me llevó a convertirme en Diseñador Gráfico desde el 2020 y Desarrollador Web desde el 2022. <br> <br>
+            Soy <strong>Alexis Jara</strong>, especialista en diseño gráfico, desarrollo web y red team, 
+            apasionado por la tecnología y la creatividad. Mi camino como autodidacta me ha 
+            permitido combinar la seguridad informática con el desarrollo de proyectos innovadores, 
+            siempre orientado a resultados y con la convicción de que el aprendizaje constante 
+            es la clave del progreso. <br> <br>
 
-            Soy fundador de InnovixTech, una agencia digital enfocada en ayudar a personas y negocios a crecer en redes sociales con soluciones creativas y efectivas. 
-            También soy dueño de ZyLogix, una tienda especializada en productos electrónicos 100% originales, con tienda oficial en: <br> <br> <a id="linktienda" href="https://www.zylogix.store">www.zylogix.store</a> <br>
-            donde combino mis conocimientos de marketing y tecnología para llevar la experiencia de compra al siguiente nivel. <br> <br>
-
-            Actualmente dedico mi tiempo al marketing digital de ZyLogix y al mundo del pentesting, donde busco compartir conocimientos, 
-            aprender constantemente y contribuir a una internet más segura.
+            He construido una comunidad de más de 19.9k seguidores en TikTok, 
+            donde comparto contenido de hacking ético para educar e inspirar a otros. 
+            Además, lidero dos emprendimientos que reflejan mi visión profesional: ZyLogix, 
+            una tienda de productos electrónicos, y Kreatix (que pronto evolucionará a Alnex Studio), 
+            una agencia que integra diseño gráfico, desarrollo web y aplicaciones web. 
+            Mi propósito es mostrar profesionalismo en cada proyecto y, al mismo tiempo, 
+            motivar a otros a creer en su potencial y transformar ideas en realidad.
           </p>
         </section>
 
