Actualización de "Lo que hago" y "Resumen"

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alexis - Portafolio Personal</title>
+  <title>Alexis - Portafolio</title>
 
   <!--
     - favicon
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Richard hanrick">Alexis Jara</h1>
 
-          <p class="title">Analista de Sistemas</p>
+          <p class="title">Diseñador UX/UI</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -247,7 +247,7 @@
                 <h4 class="h4 service-item-title">Diseño Gráfico</h4>
 
                 <p class="service-item-text">
-                  Ofreciendo los servicios exclusivamente en Innovix Tech.
+                  Branding o Construcción de Marca, Flyers, Anuncios Publicitarios y más.
                 </p>
               </div>
 
@@ -263,7 +263,7 @@
                 <h4 class="h4 service-item-title">Desarrollador Web</h4>
 
                 <p class="service-item-text">
-                  Desarrollo de sitios de alta calidad al mejor precio del mercado.
+                  Diseño, desarrollo y mantenimiento de interfaz de usuario de un sitio-página web.
                 </p>
               </div>
 
@@ -276,10 +276,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Pentesting</h4>
+                <h4 class="h4 service-item-title">Desarrollador Móvil</h4>
 
                 <p class="service-item-text">
-                  Realizo practicas de penetración en entornos controlados.
+                  Diseño, desarrollo, pruebas y mantenimiento de aplicaciones moviles hechos en Flutter.
                 </p>
               </div>
 
@@ -566,50 +566,59 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">En Proceso</h3>
+            <h3 class="h3">Lenguajes</h3>
           </div>
 
           <ol class="timeline-list">
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Lic. Analisis de Sistemas</h4>
+              <h4 class="h4 timeline-item-title">Python</h4>
 
-              <span>En curso</span>
+              <span>Utilidad Mía: Scripts</span>
 
               <p class="timeline-text">
-                Ahora estoy comenzando la carrera de Licenciatura en Análisis de Sistemas en la Universidad Americana y estoy 
-                plenamente comprometido a completarla con excelencia. Sería un honor alcanzar este título y seguir creciendo 
-                profesionalmente.
+                Python es un lenguaje de programación versátil, de alto nivel y de código abierto, 
+                conocido por su sencillez y legibilidad, lo que lo hace ideal para principiantes y 
+                profesionales. Sirve para una amplia gama de aplicaciones, 
+                incluyendo desarrollo web (principalmente el backend), 
+                ciencia de datos, inteligencia artificial (IA), 
+                machine learning (ML), y la automatización de tareas.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Asesor Comercial</h4>
+              <h4 class="h4 timeline-item-title">Dart</h4>
 
-              <span>En curso</span>
+              <span>Utilidad Mía: Desarrollo Móvil</span>
 
               <p class="timeline-text">
-                ¿Por qué no seguir sumando conocimientos? También estoy aprendiendo asesoría comercial de manera autodidacta. 
-                Es bien sabido que, mientras más sabes, mayores son las oportunidades de éxito. Por eso, cada aprendizaje cuenta y 
-                nada está de más.
+                Dart es un lenguaje de programación moderno, de código abierto y orientado a objetos, 
+                desarrollado por Google con el objetivo de ser un lenguaje eficiente para el 
+                desarrollo de aplicaciones rápidas en cualquier plataforma. 
+                Su versatilidad lo hace ideal para crear aplicaciones web, móviles, 
+                de escritorio y del lado del servidor, especialmente conocido por ser el 
+                lenguaje detrás del framework Flutter para desarrollo multiplataforma.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Marketing Digital</h4>
+              <h4 class="h4 timeline-item-title">HTML, CSS, JavaScript</h4>
 
-              <span>En curso</span>
+              <span>Utilidad Mía: Desarrollo Web</span>
 
               <p class="timeline-text">
-                Tú y yo sabemos que el marketing digital es el futuro. Por eso, estoy adquiriendo conocimientos en este ámbito de 
-                forma autodidacta, tomando cursos en línea y explorando nuevas estrategias. Además, estoy considerando invertir en 
-                formación especializada, incluyendo cursos y asesorías, para perfeccionar mis habilidades y crear campañas 
-                más atractivas y efectivas.
+                HTML, CSS y JavaScript son los tres lenguajes fundamentales para crear el 
+                front-end (la parte que el usuario ve) de un sitio web. 
+                HTML (Lenguaje de Marcado de Hipertexto) define la estructura y el 
+                contenido de la página web; CSS (Hojas de Estilo en Cascada) se encarga 
+                del diseño y la apariencia visual (colores, fuentes, etc.); 
+                y JavaScript añade interactividad y dinamismo al sitio, permitiendo que los 
+                elementos se muevan y cambien
               </p>
 
             </li>
