Nuevo proyecto en portafolio
NovinhoDev Sitio Web Preview fue añadido por Alexis el dia 25/10/2025 a las 15:21

--- a/index.html
+++ b/index.html
@@ -717,12 +717,12 @@
               <button data-filter-btn>Scripts</button>
             </li>
 
-            <!-- <li class="filter-item">
-              <button data-filter-btn>Diseño Gráfico</button>
-            </li> -->
+            <li class="filter-item">
+              <button data-filter-btn>Desarrollo Web</button>
+            </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Aplicación Web</button>
+              <button data-filter-btn>Aplicación</button>
             </li>
 
           </ul>
@@ -749,12 +749,12 @@
                 <button data-select-item>Scripts</button>
               </li>
 
-              <!-- <li class="select-item">
-                <button data-select-item>Diseño Gráfico</button>
-              </li> -->
+              <li class="select-item">
+                <button data-select-item>Desarrollo Web</button>
+              </li>
 
               <li class="select-item">
-                <button data-select-item>Aplicación Web</button>
+                <button data-select-item>Aplicación</button>
               </li>
 
             </ul>
@@ -763,7 +763,25 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="aplicación web">
+            <li class="project-item  active" data-filter-item data-category="desarrollo web">
+              <a href="https://alexis14jara.github.io/NovinhoDevPreview/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-3.png" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">NovinhoDev Sitio Web</h3>
+
+                <p class="project-category">Desarrollo Web</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="aplicación">
               <a href="https://alexis14jara.github.io/NovinAPP/">
 
                 <figure class="project-img">
@@ -776,7 +794,7 @@
 
                 <h3 class="project-title">Novin APP</h3>
 
-                <p class="project-category">Aplicación Web</p>
+                <p class="project-category">Aplicación</p>
 
               </a>
             </li>
