--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NovinhoDev</title>
+  <meta name="description" content="Sitio oficial de NovinhoDev, desarrollador web Front-End especializado en HTML, CSS, JavaScript, Python y Dart.">
 
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/novinhodev.png" type="image/x-icon">
 
   <!--
     - custom css link
@@ -46,7 +47,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Alexis Jara</h1>
+          <h1 class="name" title="Richard hanrick">NovinhoDev</h1>
 
           <p class="title">Diseñador UX/UI</p>
         </div>
@@ -88,7 +89,7 @@
             <div class="contact-info">
               <p class="contact-title">celular</p>
 
-              <a href="tel:+595992489510" class="contact-link">+595 (992) 489-510</a>
+              <a href="tel:+595992489510" class="contact-link">+595 (983) 092-018</a>
             </div>
 
           </li>
@@ -140,7 +141,7 @@
           </li>
 
           <li class="social-item">
-            <a href="https://instagram.com/lexis.xit" class="social-link">
+            <a href="https://instagram.com/novinho.dev" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
