--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <title>NovinhoDev</title>
   <meta name="description" content="Sitio oficial de NovinhoDev, desarrollador web Front-End especializado en HTML, CSS, JavaScript, Python y Dart.">
 
+  <!-- 
+    - Verificación de Google Search Console 
+  -->
+  <meta name="google-site-verification" content="LFKiBh1LxctQ1JR2hTV84QY0BxwdMm5UZnFc0JVfu2U" />
+
   <!--
     - favicon
   -->
