--- a/index.html
+++ b/index.html
@@ -907,10 +907,12 @@
 
           <h3 class="h3 form-title">Formulario</h3>
 
-          <form action="#" class="form" data-form>
+          <form action="https://api.web3forms.com/submit" class="form" data-form>
+
+            <input type="hidden" name="access_key" value="eb87d0e8-b9d2-4c97-af34-1dc884ce936c">
 
             <div class="input-wrapper">
-              <input type="text" name="fullname" class="form-input" placeholder="Nombres" required data-form-input>
+              <input type="text" name="name" class="form-input" placeholder="Nombres" required data-form-input>
 
               <input type="email" name="email" class="form-input" placeholder="Email" required data-form-input>
             </div>
