Actualizar el avatar SVG, la imagen del proyecto y el index.html
Se reemplazaron el avatar SVG y la imagen project-4.png con versiones actualizadas. Se modificó index.html para reflejar los cambios, probablemente actualizando las referencias o el diseño de las imágenes.

--- a/index.html
+++ b/index.html
@@ -769,6 +769,24 @@
 
           <ul class="project-list">
 
+            <li class="project-item  active" data-filter-item data-category="scripts">
+              <a href="https://github.com/Alexis14jara/novinho-bot.git">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-4.png" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Novinho Bot</h3>
+
+                <p class="project-category">Scripts</p>
+
+              </a>
+            </li>
+
             <li class="project-item  active" data-filter-item data-category="desarrollo web">
               <a href="https://alexis14jara.github.io/NovinhoDevPreview/">
 
