--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NovinhoDev | Creative Developer</title>
+    <title>NovinhoDev</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <link
         href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700;900&family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
+    <link rel="icon" type="svg+xml" href="favicon.svg">
 </head>
 
 <body>
