Add blog page and category filter, update meta tags
Added a new blog/index.html page with a category filter and sample posts. Enhanced app.js with category filtering logic for portfolio/blog items. Updated index.html with improved meta tags, updated contact email, blog link in hero actions, and improved alt text for images.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NovinhoDev</title>
+    <meta name="description" content="Novinho Dev (Alexis Jara) - Desarrollador Web y Front-End Developer en Paraguay. Creación de sitios web, landing pages y portafolios profesionales.">
+    <meta name="keywords" content="Novinho Dev (Alexis Jara), Desarrollador Web, Front-End Developer, Paraguay, Sitios Web, Landing Pages, Portafolios">
+    <meta name="author" content="Novinho Dev (Alexis Jara)">
+    <title>Novinho Dev | Desarrollador Web & Front-End Developer en Paraguay</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <link
@@ -72,7 +75,7 @@
                     <a href="#">GH</a>
                     <a href="#">IG</a>
                 </div>
-                <p class="menu-email">hola@novinho.dev</p>
+                <p class="menu-email">novinhodev@gmail.com</p>
             </div>
         </div>
     </div>
@@ -91,7 +94,7 @@
                 software y sitios web que no solo funcionan, sino que inspiran.</p>
 
             <div class="hero-actions fade-in delay-3">
-                <a href="#portfolio" class="btn btn-primary">Ver mi trabajo</a>
+                <a href="./blog" class="btn btn-primary">Visitar Blog</a>
                 <a href="#contact" class="btn btn-outline">Contáctame</a>
             </div>
         </div>
@@ -112,7 +115,7 @@
                 <div class="about-image-col reveal-left">
                     <div class="image-frame">
                         <div class="image-placeholder">
-                            <img class="about-imagen" src="./assets/images/about-image.png" alt="">
+                            <img class="about-imagen" src="./assets/images/about-image.png" alt="Novinho Dev (Alexis Jara), desarrollador web en Paraguay">
                         </div>
                         <div class="floating-card card-1">
                             <i class="ph ph-code"></i> Developer
@@ -125,7 +128,7 @@
                 <div class="about-text-col reveal-right">
                     <span class="section-tag">01. Sobre Mí</span>
                     <h2>Código limpio,<br>Diseño <span class="text-beige">humano.</span></h2>
-                    <p>En un mundo digital saturado, la claridad es poder. Soy "NovinhoDev", un desarrollador full-stack
+                    <p>En un mundo digital saturado, la claridad es poder. Soy "NovinhoDev", un desarrollador Front-End en Paraguay
                         con ojo para el detalle visual.</p>
                     <p>No solo entrego código; entrego soluciones escalables. Me especializo en traducir identidades de
                         marca en interfaces fluidas y funcionales, cuidando cada pixel y cada línea de lógica.</p>
@@ -186,7 +189,7 @@
             <div class="portfolio-grid">
                 <div class="portfolio-item reveal-up">
                     <div class="portfolio-thumb">
-                        <img class="portfolio-image" src="./assets/images/portfolio-3.png" alt="">
+                        <img class="portfolio-image" src="./assets/images/portfolio-3.png" alt="InoFisio - Landing Page">
                         <div class="thumb-overlay">
                             <a href="https://alexis14jara.github.io/InoFisioPreview/" class="btn-circle"><i
                                     class="ph ph-arrow-up-right"></i></a>
@@ -200,7 +203,7 @@
                 </div>
                 <div class="portfolio-item reveal-up delay-1">
                     <div class="portfolio-thumb">
-                        <img class="portfolio-image" src="./assets/images/portfolio-2.png" alt="">
+                        <img class="portfolio-image" src="./assets/images/portfolio-2.png" alt="MevoStore - E-commerce">
                         <div class="thumb-overlay">
                             <a href="https://alexis14jara.github.io/MevoStorePreview/" class="btn-circle"><i
                                     class="ph ph-arrow-up-right"></i></a>
@@ -214,7 +217,7 @@
                 </div>
                 <div class="portfolio-item reveal-up delay-2">
                     <div class="portfolio-thumb">
-                        <img class="portfolio-image" src="./assets/images/portfolio-1.png" alt="">
+                        <img class="portfolio-image" src="./assets/images/portfolio-1.png" alt="PabloBarber - Landing Page">
                         <div class="thumb-overlay">
                             <a href="https://alexis14jara.github.io/PabloBarber/" class="btn-circle"><i
                                     class="ph ph-arrow-up-right"></i></a>
