--- a/index.html
+++ b/index.html
@@ -508,6 +508,11 @@
 
 
     <script src="./assets/js/app.js"></script>
+
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script>
+        netlifyIdentity.init();
+    </script>
 </body>
 
 </html>
