--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
 
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script>
-        netlifyIdentity.init();
+        const identity = netlifyIdentity.init();
     </script>
 </body>
 
