--- a/admin/index.html
+++ b/admin/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Admin | Novinho Dev</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin - Novinho</title>
 </head>
 <body>
-    <!-- Netlify CMS -->
-    <script src="https://unpkg.com/netlify-cms@^2.10.0/dist/netlify-cms.js"></script>
+    <!-- Decap CMS -->
+    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
 </body>
 </html>
+
 
