--- a/novaflow/documentacion/index.html
+++ b/novaflow/documentacion/index.html
@@ -229,9 +229,182 @@
             }
         }
     </style>
+    <style>
+        /* Mobile Block Screen */
+        #mobile-block-screen {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            height: 100dvh;
+            /* Dynamic viewport height for mobile */
+            background: #0f0f13;
+            z-index: 9999;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 30px 20px;
+            text-align: center;
+            overflow: hidden;
+        }
+
+        #mobile-block-screen::before {
+            content: "";
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 500px;
+            height: 500px;
+            background: radial-gradient(circle, rgba(107, 70, 193, 0.2) 0%, rgba(15, 15, 19, 0) 70%);
+            z-index: -1;
+        }
+
+        .mobile-block-logo {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 30px;
+            font-size: 1.5rem;
+            font-weight: 700;
+        }
+
+        .mobile-block-logo img {
+            width: 40px;
+            height: 40px;
+            margin-right: 8px;
+        }
+
+        .mobile-block-logo .flow {
+            font-weight: 500;
+        }
+
+        .mobile-block-content h1 {
+            font-size: 1.4rem;
+            margin-bottom: 12px;
+            background: linear-gradient(to right, #fff, #a0a0b0);
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            line-height: 1.3;
+            padding: 0 10px;
+        }
+
+        .mobile-block-content p {
+            color: #a0a0b0;
+            font-size: 0.95rem;
+            line-height: 1.5;
+            max-width: 90%;
+            margin: 0 auto;
+            padding: 0 10px;
+        }
+
+        .mobile-block-icon {
+            width: 70px;
+            height: 70px;
+            background: rgba(107, 70, 193, 0.1);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0 auto 25px;
+            border: 2px solid #6b46c1;
+            flex-shrink: 0;
+        }
+
+        .mobile-block-icon svg {
+            width: 35px;
+            height: 35px;
+            color: #6b46c1;
+        }
+
+        /* Extra small screens */
+        @media (max-width: 375px) {
+            .mobile-block-logo {
+                font-size: 1.3rem;
+                margin-bottom: 20px;
+            }
+
+            .mobile-block-logo img {
+                width: 35px;
+                height: 35px;
+            }
+
+            .mobile-block-content h1 {
+                font-size: 1.2rem;
+            }
+
+            .mobile-block-content p {
+                font-size: 0.9rem;
+            }
+
+            .mobile-block-icon {
+                width: 60px;
+                height: 60px;
+                margin-bottom: 20px;
+            }
+
+            .mobile-block-icon svg {
+                width: 30px;
+                height: 30px;
+            }
+        }
+    </style>
+    <script>
+        // Mobile detection function
+        function isMobileDevice() {
+            // Check user agent
+            const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+            const mobileRegex = /android|webos|iphone|ipad|ipod|blackberry|iemobile|opera mini|mobile|tablet/i;
+
+            // Check screen size (less than 1024px width)
+            const isSmallScreen = window.innerWidth < 1024;
+
+            // Check if it's a mobile browser
+            const isMobileBrowser = mobileRegex.test(userAgent.toLowerCase());
+
+            // Check touch capability
+            const isTouchDevice = 'ontouchstart' in window || navigator.maxTouchPoints > 0;
+
+            // Return true if any mobile indicator is present
+            return isMobileBrowser || (isSmallScreen && isTouchDevice);
+        }
+
+        // Show mobile block screen if on mobile
+        document.addEventListener('DOMContentLoaded', function () {
+            if (isMobileDevice()) {
+                document.getElementById('mobile-block-screen').style.display = 'flex';
+                document.body.style.overflow = 'hidden';
+            }
+        });
+    </script>
 </head>
 
 <body>
+
+    <!-- Mobile Block Screen -->
+    <div id="mobile-block-screen">
+        <div class="mobile-block-logo">
+            <img src="../assets/images/logo.svg" alt="Logo de NovaFlow">
+            <p>Nova</p>
+            <spam class="flow">Flow</spam>
+        </div>
+
+        <div class="mobile-block-icon">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
+                <line x1="8" y1="21" x2="16" y2="21"></line>
+                <line x1="12" y1="17" x2="12" y2="21"></line>
+            </svg>
+        </div>
+
+        <div class="mobile-block-content">
+            <h1>Novaflow está disponible solo para computadoras</h1>
+            <p>Esta plataforma está diseñada para usarse junto a Google Chrome y WhatsApp Web.</p>
+        </div>
+    </div>
 
     <nav class="navbar">
         <div class="container nav-content">
@@ -277,8 +450,8 @@
             <section id="introduccion">
                 <h2>Introducción</h2>
                 <p>
-                    Novaflow es una extensión para Google Chrome diseñada para facilitar 
-                    el envío de campañas de mensajes a través de WhatsApp Web, de forma organizada, 
+                    Novaflow es una extensión para Google Chrome diseñada para facilitar
+                    el envío de campañas de mensajes a través de WhatsApp Web, de forma organizada,
                     controlada y segura.
                 </p>
                 <p>
@@ -291,7 +464,7 @@
                     <li>Reducir errores y riesgos de bloqueo mediante límites y pausas inteligentes</li>
                 </ul>
                 <p>
-                    Novaflow funciona localmente en tu navegador y se integra directamente 
+                    Novaflow funciona localmente en tu navegador y se integra directamente
                     con WhatsApp Web, sin servidores externos ni intermediarios.
                 </p>
 
@@ -325,7 +498,9 @@
                     Instalación manual (Beta)
                 </h3>
                 <ol>
-                    <li>Descarga la carpeta de la extensión Novaflow: <a class="link-download" href="../NovaFlow-Beta.zip" download="NovaFlow-Beta.zip">Clic Para Descargar NovaFlow-Beta.zip</a></li>
+                    <li>Descarga la carpeta de la extensión Novaflow: <a class="link-download"
+                            href="../NovaFlow-Beta.zip" download="NovaFlow-Beta.zip">Clic Para Descargar
+                            NovaFlow-Beta.zip</a></li>
                     <li>Abre Chrome y accede a <code>chrome://extensions</code>.</li>
                     <li>Activa Modo desarrollador.</li>
                     <li>Haz clic en Cargar sin empaquetar.</li>
@@ -461,8 +636,11 @@
 
                 <div class="info-box pro-box">
                     <p>
-                        Todos los reportes se pueden exportar en formato CSV para análisis posterior o integración con tus
-                        sistemas CRM. <br> <spam class="pro"><strong>ESTA FUNCIONALIDAD SOLO ESTÁ DISPONIBLE EN LA VERSIÓN PRO</strong></spam>
+                        Todos los reportes se pueden exportar en formato CSV para análisis posterior o integración con
+                        tus
+                        sistemas CRM. <br>
+                        <spam class="pro"><strong>ESTA FUNCIONALIDAD SOLO ESTÁ DISPONIBLE EN LA VERSIÓN PRO</strong>
+                        </spam>
                     </p>
                 </div>
             </section>
