--- a/novaflow/index.html
+++ b/novaflow/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,17 +10,193 @@
     <title>NovaFlow - Automatización Inteligente | Beta</title>
     <link rel="shortcut icon" href="./favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <style>
+        /* Mobile Block Screen */
+        #mobile-block-screen {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            height: 100dvh;
+            /* Dynamic viewport height for mobile */
+            background: #0f0f13;
+            z-index: 9999;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 30px 20px;
+            text-align: center;
+            overflow: hidden;
+        }
+
+        #mobile-block-screen::before {
+            content: "";
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 500px;
+            height: 500px;
+            background: radial-gradient(circle, rgba(107, 70, 193, 0.2) 0%, rgba(15, 15, 19, 0) 70%);
+            z-index: -1;
+        }
+
+        .mobile-block-logo {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 30px;
+            font-size: 1.5rem;
+            font-weight: 700;
+        }
+
+        .mobile-block-logo img {
+            width: 40px;
+            height: 40px;
+            margin-right: 8px;
+        }
+
+        .mobile-block-logo .flow {
+            font-weight: 500;
+        }
+
+        .mobile-block-content h1 {
+            font-size: 1.4rem;
+            margin-bottom: 12px;
+            background: linear-gradient(to right, #fff, #a0a0b0);
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            line-height: 1.3;
+            padding: 0 10px;
+        }
+
+        .mobile-block-content p {
+            color: #a0a0b0;
+            font-size: 0.95rem;
+            line-height: 1.5;
+            max-width: 90%;
+            margin: 0 auto;
+            padding: 0 10px;
+        }
+
+        .mobile-block-icon {
+            width: 70px;
+            height: 70px;
+            background: rgba(107, 70, 193, 0.1);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0 auto 25px;
+            border: 2px solid #6b46c1;
+            flex-shrink: 0;
+        }
+
+        .mobile-block-icon svg {
+            width: 35px;
+            height: 35px;
+            color: #6b46c1;
+        }
+
+        /* Extra small screens */
+        @media (max-width: 375px) {
+            .mobile-block-logo {
+                font-size: 1.3rem;
+                margin-bottom: 20px;
+            }
+
+            .mobile-block-logo img {
+                width: 35px;
+                height: 35px;
+            }
+
+            .mobile-block-content h1 {
+                font-size: 1.2rem;
+            }
+
+            .mobile-block-content p {
+                font-size: 0.9rem;
+            }
+
+            .mobile-block-icon {
+                width: 60px;
+                height: 60px;
+                margin-bottom: 20px;
+            }
+
+            .mobile-block-icon svg {
+                width: 30px;
+                height: 30px;
+            }
+        }
+    </style>
+    <script>
+        // Mobile detection function
+        function isMobileDevice() {
+            // Check user agent
+            const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+            const mobileRegex = /android|webos|iphone|ipad|ipod|blackberry|iemobile|opera mini|mobile|tablet/i;
+
+            // Check screen size (less than 1024px width)
+            const isSmallScreen = window.innerWidth < 1024;
+
+            // Check if it's a mobile browser
+            const isMobileBrowser = mobileRegex.test(userAgent.toLowerCase());
+
+            // Check touch capability
+            const isTouchDevice = 'ontouchstart' in window || navigator.maxTouchPoints > 0;
+
+            // Return true if any mobile indicator is present
+            return isMobileBrowser || (isSmallScreen && isTouchDevice);
+        }
+
+        // Show mobile block screen if on mobile
+        document.addEventListener('DOMContentLoaded', function () {
+            if (isMobileDevice()) {
+                document.getElementById('mobile-block-screen').style.display = 'flex';
+                document.body.style.overflow = 'hidden';
+            }
+        });
+    </script>
 </head>
+
 <body>
+
+    <!-- Mobile Block Screen -->
+    <div id="mobile-block-screen">
+        <div class="mobile-block-logo">
+            <img src="./assets/images/logo.svg" alt="Logo de NovaFlow">
+            <p>Nova</p>
+            <spam class="flow">Flow</spam>
+        </div>
+
+        <div class="mobile-block-icon">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
+                <line x1="8" y1="21" x2="16" y2="21"></line>
+                <line x1="12" y1="17" x2="12" y2="21"></line>
+            </svg>
+        </div>
+
+        <div class="mobile-block-content">
+            <h1>Novaflow está disponible solo para computadoras</h1>
+            <p>Esta plataforma está diseñada para usarse junto a Google Chrome y WhatsApp Web.</p>
+        </div>
+    </div>
 
     <nav class="navbar">
         <div class="container nav-content">
             <div class="logo">
                 <img src="./assets/images/logo.svg" alt="Logo de NovaFlow">
-                <p>Nova</p><spam class="flow">Flow</spam> <span class="badge">BETA v1.0</span>
+                <p>Nova</p>
+                <spam class="flow">Flow</spam> <span class="badge">BETA v1.0</span>
             </div>
             <div>
-                <a href="https://wa.me/595983092018/?text=Hola%20NovinhoDev,%20me%20gustaría%20reportar%20un%20error%20en%20NovaFlow." class="btn btn-report">Reportar Error</a>
+                <a href="https://wa.me/595983092018/?text=Hola%20NovinhoDev,%20me%20gustaría%20reportar%20un%20error%20en%20NovaFlow."
+                    class="btn btn-report">Reportar Error</a>
                 <a href="./documentacion/" class="btn btn-primary">Documentación</a>
             </div>
         </div>
@@ -28,8 +205,9 @@
     <section class="hero">
         <div class="container">
             <h1>Automatiza tus campañas<br>con precisión quirúrgica.</h1>
-            <p>La herramienta definitiva para la gestión de envíos masivos. Control total sobre tiempos, seguridad y reportes detallados desde tu navegador.</p>
-            
+            <p>La herramienta definitiva para la gestión de envíos masivos. Control total sobre tiempos, seguridad y
+                reportes detallados desde tu navegador.</p>
+
             <div class="hero-buttons">
                 <a download="NovaFlow-Beta.zip" href="NovaFlow-Beta.zip" class="btn btn-primary">Descargar Extensión</a>
                 <a href="./documentacion/" class="btn btn-outline">Guía de Instalación</a>
@@ -43,8 +221,11 @@
                         <div class="dot green"></div>
                     </div>
                     <div class="img-placeholder">
-                        <img src="./assets/images/image.png" alt="Dashboard de NovaFlow mostrando reporte de campañas" style="width: 100%; height: auto; display: block; opacity: 0.9;">
-                        <div style="position: absolute; inset: 0; background: linear-gradient(to top, var(--bg-dark), transparent);"></div>
+                        <img src="./assets/images/image.png" alt="Dashboard de NovaFlow mostrando reporte de campañas"
+                            style="width: 100%; height: auto; display: block; opacity: 0.9;">
+                        <div
+                            style="position: absolute; inset: 0; background: linear-gradient(to top, var(--bg-dark), transparent);">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -61,26 +242,40 @@
             <div class="grid">
                 <div class="card">
                     <div class="icon-box">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2">
+                            <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
+                        </svg>
                     </div>
                     <h3>Campañas Masivas</h3>
-                    <p>Carga listas de contactos y personaliza tus mensajes. Sistema inteligente de colas para gestionar envíos pendientes y fallidos.</p>
+                    <p>Carga listas de contactos y personaliza tus mensajes. Sistema inteligente de colas para gestionar
+                        envíos pendientes y fallidos.</p>
                 </div>
 
                 <div class="card">
                     <div class="icon-box">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path></svg>
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2">
+                            <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
+                        </svg>
                     </div>
                     <h3>Seguridad Anti-Bloqueo</h3>
-                    <p>Configura pausas aleatorias (min/max) entre mensajes y establece límites de seguridad por sesión para simular comportamiento humano.</p>
+                    <p>Configura pausas aleatorias (min/max) entre mensajes y establece límites de seguridad por sesión
+                        para simular comportamiento humano.</p>
                 </div>
 
                 <div class="card">
                     <div class="icon-box">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2">
+                            <line x1="18" y1="20" x2="18" y2="10"></line>
+                            <line x1="12" y1="20" x2="12" y2="4"></line>
+                            <line x1="6" y1="20" x2="6" y2="14"></line>
+                        </svg>
                     </div>
                     <h3>Reportes Detallados</h3>
-                    <p>Visualiza en tiempo real el rendimiento de tus campañas. Métricas de envíos exitosos, fallidos y timestamps exactos.</p>
+                    <p>Visualiza en tiempo real el rendimiento de tus campañas. Métricas de envíos exitosos, fallidos y
+                        timestamps exactos.</p>
                 </div>
             </div>
         </div>
@@ -115,7 +310,8 @@
         <div class="container">
             <div class="footer-links">
                 <a href="./documentacion/">Documentación</a>
-                <a href="https://wa.me/595983092018/?text=Hola%20NovinhoDev,%20me%20gustaría%20una%20ayuda%20con%20NovaFlow.">Soporte</a>
+                <a
+                    href="https://wa.me/595983092018/?text=Hola%20NovinhoDev,%20me%20gustaría%20una%20ayuda%20con%20NovaFlow.">Soporte</a>
                 <a href="#">Privacidad</a>
                 <a href="#">Términos</a>
             </div>
@@ -125,4 +321,5 @@
     </footer>
 
 </body>
+
 </html>
