--- a/novaflow/documentacion/index.html
+++ b/novaflow/documentacion/index.html
@@ -228,127 +228,194 @@
                 font-size: 1.75rem;
             }
         }
+
+        @media (max-width: 768px) {
+
+            /* Navbar mobile optimization */
+            .navbar {
+                padding: 12px 0;
+            }
+
+            .nav-content {
+                flex-direction: row;
+                justify-content: flex-start;
+                align-items: center;
+                gap: 10px;
+            }
+
+            /* Hide buttons on mobile */
+            .nav-content>div:last-child {
+                display: none;
+            }
+
+            .logo {
+                font-size: 1.1rem;
+            }
+
+            .logo img {
+                width: 28px;
+                height: 28px;
+            }
+
+            .logo .badge {
+                font-size: 0.65rem;
+                padding: 3px 6px;
+            }
+
+            .doc-content h1 {
+                font-size: 2rem;
+            }
+
+            .doc-content h2 {
+                font-size: 1.5rem;
+            }
+        }
     </style>
     <style>
-        /* Mobile Block Screen */
-        #mobile-block-screen {
+        /* Mobile Notification Modal */
+        #mobile-notification-overlay {
             display: none;
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
-            height: 100vh;
-            height: 100dvh;
-            /* Dynamic viewport height for mobile */
-            background: #0f0f13;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.85);
+            backdrop-filter: blur(8px);
             z-index: 9999;
-            flex-direction: column;
             align-items: center;
             justify-content: center;
-            padding: 30px 20px;
-            text-align: center;
-            overflow: hidden;
+            padding: 20px;
+            animation: fadeIn 0.3s ease;
         }
 
-        #mobile-block-screen::before {
-            content: "";
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+
+            to {
+                opacity: 1;
+            }
+        }
+
+        .mobile-notification-modal {
+            background: linear-gradient(135deg, #1c1c24 0%, #15151b 100%);
+            border: 1px solid #6b46c1;
+            border-radius: 16px;
+            padding: 30px 25px;
+            max-width: 450px;
+            width: 100%;
+            position: relative;
+            box-shadow: 0 20px 60px rgba(107, 70, 193, 0.3), 0 0 0 1px rgba(107, 70, 193, 0.1);
+            animation: slideUp 0.3s ease;
+        }
+
+        @keyframes slideUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .mobile-notification-close {
             position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 500px;
-            height: 500px;
-            background: radial-gradient(circle, rgba(107, 70, 193, 0.2) 0%, rgba(15, 15, 19, 0) 70%);
-            z-index: -1;
-        }
-
-        .mobile-block-logo {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-bottom: 30px;
-            font-size: 1.5rem;
-            font-weight: 700;
-        }
-
-        .mobile-block-logo img {
-            width: 40px;
-            height: 40px;
-            margin-right: 8px;
-        }
-
-        .mobile-block-logo .flow {
-            font-weight: 500;
-        }
-
-        .mobile-block-content h1 {
-            font-size: 1.4rem;
-            margin-bottom: 12px;
-            background: linear-gradient(to right, #fff, #a0a0b0);
-            -webkit-background-clip: text;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
-            line-height: 1.3;
-            padding: 0 10px;
-        }
-
-        .mobile-block-content p {
-            color: #a0a0b0;
-            font-size: 0.95rem;
-            line-height: 1.5;
-            max-width: 90%;
-            margin: 0 auto;
-            padding: 0 10px;
-        }
-
-        .mobile-block-icon {
-            width: 70px;
-            height: 70px;
+            top: 15px;
+            right: 15px;
             background: rgba(107, 70, 193, 0.1);
+            border: 1px solid rgba(107, 70, 193, 0.3);
+            color: #6b46c1;
+            width: 32px;
+            height: 32px;
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            margin: 0 auto 25px;
-            border: 2px solid #6b46c1;
-            flex-shrink: 0;
+            cursor: pointer;
+            transition: all 0.2s ease;
+            font-size: 20px;
+            line-height: 1;
         }
 
-        .mobile-block-icon svg {
-            width: 35px;
-            height: 35px;
+        .mobile-notification-close:hover {
+            background: rgba(107, 70, 193, 0.2);
+            border-color: #6b46c1;
+            transform: rotate(90deg);
+        }
+
+        .mobile-notification-icon {
+            width: 60px;
+            height: 60px;
+            background: rgba(107, 70, 193, 0.15);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0 auto 20px;
+            border: 2px solid #6b46c1;
+        }
+
+        .mobile-notification-icon svg {
+            width: 30px;
+            height: 30px;
             color: #6b46c1;
         }
 
-        /* Extra small screens */
+        .mobile-notification-content h3 {
+            font-size: 1.3rem;
+            margin-bottom: 12px;
+            background: linear-gradient(to right, #fff, #d0d0d0);
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-align: center;
+            line-height: 1.3;
+        }
+
+        .mobile-notification-content p {
+            color: #a0a0b0;
+            font-size: 0.95rem;
+            line-height: 1.6;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .mobile-notification-button {
+            width: 100%;
+            padding: 12px 24px;
+            background: #6b46c1;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            font-weight: 600;
+            font-size: 0.95rem;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 14px rgba(107, 70, 193, 0.4);
+        }
+
+        .mobile-notification-button:hover {
+            background: #553c9a;
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(107, 70, 193, 0.5);
+        }
+
         @media (max-width: 375px) {
-            .mobile-block-logo {
-                font-size: 1.3rem;
-                margin-bottom: 20px;
+            .mobile-notification-modal {
+                padding: 25px 20px;
             }
 
-            .mobile-block-logo img {
-                width: 35px;
-                height: 35px;
+            .mobile-notification-content h3 {
+                font-size: 1.15rem;
             }
 
-            .mobile-block-content h1 {
-                font-size: 1.2rem;
-            }
-
-            .mobile-block-content p {
+            .mobile-notification-content p {
                 font-size: 0.9rem;
-            }
-
-            .mobile-block-icon {
-                width: 60px;
-                height: 60px;
-                margin-bottom: 20px;
-            }
-
-            .mobile-block-icon svg {
-                width: 30px;
-                height: 30px;
             }
         }
     </style>
@@ -372,11 +439,17 @@
             return isMobileBrowser || (isSmallScreen && isTouchDevice);
         }
 
-        // Show mobile block screen if on mobile
+        // Show mobile notification if on mobile and not dismissed
+        function closeMobileNotification() {
+            const overlay = document.getElementById('mobile-notification-overlay');
+            overlay.style.display = 'none';
+            localStorage.setItem('novaflow-mobile-notification-dismissed', 'true');
+        }
+
         document.addEventListener('DOMContentLoaded', function () {
-            if (isMobileDevice()) {
-                document.getElementById('mobile-block-screen').style.display = 'flex';
-                document.body.style.overflow = 'hidden';
+            const dismissed = localStorage.getItem('novaflow-mobile-notification-dismissed');
+            if (isMobileDevice() && !dismissed) {
+                document.getElementById('mobile-notification-overlay').style.display = 'flex';
             }
         });
     </script>
@@ -384,25 +457,28 @@
 
 <body>
 
-    <!-- Mobile Block Screen -->
-    <div id="mobile-block-screen">
-        <div class="mobile-block-logo">
-            <img src="../assets/images/logo.svg" alt="Logo de NovaFlow">
-            <p>Nova</p>
-            <spam class="flow">Flow</spam>
-        </div>
+    <!-- Mobile Notification Modal -->
+    <div id="mobile-notification-overlay">
+        <div class="mobile-notification-modal">
+            <button class="mobile-notification-close" onclick="closeMobileNotification()"
+                aria-label="Cerrar notificación">
+                ×
+            </button>
 
-        <div class="mobile-block-icon">
-            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
-                <line x1="8" y1="21" x2="16" y2="21"></line>
-                <line x1="12" y1="17" x2="12" y2="21"></line>
-            </svg>
-        </div>
+            <div class="mobile-notification-icon">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
+                    <line x1="8" y1="21" x2="16" y2="21"></line>
+                    <line x1="12" y1="17" x2="12" y2="21"></line>
+                </svg>
+            </div>
 
-        <div class="mobile-block-content">
-            <h1>Novaflow está disponible solo para computadoras</h1>
-            <p>Esta plataforma está diseñada para usarse junto a Google Chrome y WhatsApp Web.</p>
+            <div class="mobile-notification-content">
+                <h3>Novaflow está diseñado para escritorio</h3>
+                <p>Esta plataforma está optimizada para usarse junto a Google Chrome y WhatsApp Web en computadoras.</p>
+                <button class="mobile-notification-button" onclick="closeMobileNotification()">Entendido,
+                    continuar</button>
+            </div>
         </div>
     </div>
 
