--- a/novaflow/documentacion/index.html
+++ b/novaflow/documentacion/index.html
@@ -11,29 +11,12 @@
     <link rel="shortcut icon" href="../favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/styles.css">
 
+    <!-- Firebase SDK (Compat) -->
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
-    <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-app.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
-
-        // Your web app's Firebase configuration
-        const firebaseConfig = {
-            apiKey: "AIzaSyCKNNldmWRDej0_m2Lonup4SUPjOqKhsh8",
-            authDomain: "novaflow-backend-a84e3.firebaseapp.com",
-            projectId: "novaflow-backend-a84e3",
-            storageBucket: "novaflow-backend-a84e3.firebasestorage.app",
-            messagingSenderId: "531939082742",
-            appId: "1:531939082742:web:8d30bedc41f58eca27c7d7"
-        };
-
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-        const db = firebase.firestore();
-    </script>
+    <!-- Custom Firebase Logic -->
+    <script src="../assets/js/firebase-logic.js"></script>
 
     <style>
         /* Documentation-specific styles */
@@ -600,7 +583,8 @@
                 </h3>
                 <ol>
                     <li>Descarga la carpeta de la extensión Novaflow: <a class="link-download"
-                            href="../NovaFlow-Beta.zip" onclick="incrementarDescarga()" download="NovaFlow-Beta.zip">Clic Para Descargar
+                            href="../NovaFlow-Beta.zip" data-track-download="true" download="NovaFlow-Beta.zip">Clic
+                            Para Descargar
                             NovaFlow-Beta.zip</a></li>
                     <li>Abre Chrome y accede a <code>chrome://extensions</code>.</li>
                     <li>Activa Modo desarrollador.</li>
