Añadir detección de AdBlock y modal de notificación al usuario
Se introduce la detección heurística de bloqueadores de anuncios mediante ads.js y adblockdetecte.js, mostrando un aviso modal si se detectan bloqueadores de anuncios. Se actualiza styles.css con estilos modales e inserta scripts de detección en index.html y las páginas de documentación para informar a los usuarios sobre las funciones limitadas y fomentar su soporte.

--- a/novaflow/documentacion/index.html
+++ b/novaflow/documentacion/index.html
@@ -11,6 +11,10 @@
     <link rel="shortcut icon" href="../favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/styles.css">
 
+    <!-- AdBlock Detection -->
+    <script src="../ads.js"></script>
+    <script src="../assets/js/adblockdetecte.js"></script>
+
     <!-- Firebase SDK (Compat) -->
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
